# rk-deviceio

./: CMakeLists.txt  DeviceIOTest.cpp  bt_test.cpp
DeviceIO/: CMakeLists.txt
DeviceIO/bluetooth/bluez/: Rk_bt.cpp  avrcpctrl.cpp  avrcpctrl.h  bluez_ctrl.cpp  bluez_ctrl.h  bluez_manager_1s2.cpp  bt_hal.cpp  gatt_client.c  gatt_client.h  gatt_config.c  gatt_config.h  obex_client.c  obex_client.h
DeviceIO/bluetooth/bluez/a2dp_source/: a2dp_masterctrl.cpp  a2dp_masterctrl.h  agent.c  gatt.c  gatt.h  shell.c
DeviceIO/bluetooth/bluez/bluez_alsa_client/: ctl-client.cpp  ctl-client.h  ctl-proto.h  rfcomm_msg.cpp  rfcomm_msg.h
DeviceIO/bluetooth/bluez/gdbus/: client.c
DeviceIO/bluetooth/bluez/spp_server/: spp_server.cpp  spp_server.h
DeviceIO/bluetooth/bsa/: bluetooth_bsa.cpp  bluetooth_bsa.h
DeviceIO/bluetooth/bsa/broadcom/: app_av.cpp  app_avk.cpp  app_ble.cpp  app_ble_client.cpp  app_ble_client_db.cpp  app_ble_rk_server.cpp  app_ble_wifi_introducer.cpp  app_dg.cpp  app_disc.cpp  app_dm.cpp  app_hs.cpp  app_manager.cpp  app_pbc.cpp  app_xml_param.cpp
DeviceIO/bluetooth/bsa/broadcom/include/: app_av.h  app_avk.h  app_ble.h  app_ble_client.h  app_ble_client_db.h  app_ble_rk_server.h  app_ble_wifi_introducer.h  app_dg.h  app_hs.h  app_manager.h
DeviceIO/bluetooth/bsa/cypress/: app_alsa.cpp  app_av.cpp  app_avk.cpp  app_ble.cpp  app_ble_client.cpp  app_ble_client_db.cpp  app_ble_rk_server.cpp  app_ble_wifi_introducer.cpp  app_dg.cpp  app_disc.cpp  app_hs.cpp  app_manager.cpp  app_mgt.cpp  app_pbc.cpp  app_xml_param.cpp  bluetooth_bsa.cpp
DeviceIO/bluetooth/bsa/cypress/include/: app_av.h  app_avk.h  app_ble.h  app_ble_client.h  app_ble_client_db.h  app_ble_rk_server.h  app_ble_wifi_introducer.h  app_dg.h  app_hs.h  app_manager.h  bluetooth_bsa.h
DeviceIO/bluetooth/doc/: Rockchip_Developer_Guide_Rk3308_DeviceIo_Bluetooth_CN.md
DeviceIO/bluetooth/utility/: slog.h  utility.c  utility.h
DeviceIO/include/DeviceIo/: BtParameter.h  BtsrcParameter.h  DeviceIo.h  NetLinkWrapper.h  Properties.h  RK_log.h  RkBle.h  RkBleClient.h  RkBtBase.h  RkBtHfp.h  RkBtMaster.h  RkBtObex.h  RkBtSink.h  RkBtSource.h  RkBtSpp.h  Rk_audio.h  Rk_bt.h  Rk_key.h  Rk_led.h  Rk_system.h  Rk_voice_print.h  Rk_wifi.h  WifiManager.h  bt_hal.h  bt_manager_1s2.h
DeviceIO/src/: CMakeLists.txt
DeviceIO/src/linux/: DeviceIo.cpp  Logger.h  NetLinkWrapper.cpp  NetLinkWrapper.h  RK_log.cpp  RK_timer.cpp  Rk_audio.cpp  Rk_battery.cpp  Rk_key.cpp  Rk_led.cpp  Rk_shell.cpp  Rk_socket_app.c  Rk_system.cpp  SoundController.cpp  Timer.cpp  Timer.h  WifiUtil.cpp  WifiUtil.h  bluetooth.cpp  bluetooth.cpp.bak  bluetooth.h  key.cpp  key.h  led.h  led_pwm.cpp  led_test.cpp  power.cpp  power.h  shell.cpp  shell.h  socket_app.cpp  socket_app.h  wifi.cpp
DeviceIO/src/linux/RkMediaPlayer/: RkMediaPlayer.c
DeviceIO/src/linux/bluetooth/: avrcpctrl.cpp  avrcpctrl.h  bluetooth.cpp  bluez_ctrl.cpp  bluez_ctrl.h  bt_hal.cpp  gatt_config.c
DeviceIO/src/linux/bluetooth/a2dp_source/: a2dp_masterctrl.c  a2dp_masterctrl.cpp  a2dp_masterctrl.h  advertising.c  advertising.h  agent.c  agent.h  gatt.c  gatt.h  io-glib.c  io.h  queue.c  queue.h  shell.c  shell.h  util.c  util.h
DeviceIO/src/linux/bluetooth/spp_server/: spp_server.cpp  spp_server.h
DeviceIO/src/linux/gst_player/: gst_player.cpp  gst_player.h
DeviceIO/src/linux/netlink/: NetLinkWrapper.cpp  Rk_softap.cpp  TcpServer.cpp  TcpServer.h  UdpServer.cpp  UdpServer.h
DeviceIO/src/linux/netlink/test/: NetlinkTest.cpp
DeviceIO/src/linux/propity/: Properties.cpp  RK_property.cpp
DeviceIO/src/linux/voice_print/: Rk_voice_print.c  _vp_kiss_fft_guts.h  voice_print.h  vp_common.c  vp_common.h  vp_decode.c  vp_encode.c  vp_kiss_fft.c  vp_rscode.c  vp_rscode.h
DeviceIO/src/linux/wifi/: Hostapd.cpp  Hostapd.h  Rk_wifi.cpp  ScanResult.cpp  WifiManager.cpp  ping.cpp  ping.h  rk_airkiss
DeviceIO/src/linux/wifi/test/: WifiManagerTest.cpp
DeviceIO/src/utility/: utility.c
doc/: Rockchip_Developer_Guide_DeviceIo_Bluetooth_CN.md  Rockchip_Developer_Guide_Network_Config_CN.md  Rockchip_Developer_Guide_Rk3308_DeviceIo_Key_CN.md  Rockchip_Developer_Guide_Rk3308_DeviceIo_Led_CN.md  Rockchip_Developer_Guide_Rk3308_DeviceIo_WIFI_CN.md
librkmediaplayer/source/: CMakeLists.txt
librkmediaplayer/source/include/: RK_mediaplayer.h
librkmediaplayer/source/include/DeviceIo/: RK_mediaplayer.h
librkmediaplayer/source/src/: RK_mediaplayer.c
test/: CMakeLists.txt  DeviceIOTest.cpp  bt_test.cpp  bt_test.h  bt_test_1s2.cpp  bt_test_1s2.h  rk_ble_app.c  rk_ble_app.h  rk_wifi_test.c  rk_wifi_test.h
test/rk3326-wangyi-dictionary-pan/: CMakeLists.txt  rkbtsource.cpp  rkbtsource_common.h  rkbtsource_server.cpp
